# rexif

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  serialize_fuzz.rs
src/: exif.rs  exifpost.rs  exifreadable.rs  ifdformat.rs  image.rs  lib.rs  lowlevel.rs  main.rs  rational.rs  tiff.rs  types.rs  types_impl.rs
tests/: integration_test.rs
