[package]
name = "rexif"
version = "0.3.6"
authors = ["Elvis Pfützenreuter <epxx@epxx.co>"]
include = ["**/*.rs", "Cargo.toml", "README.md"]
description = "RExif is a native Rust crate, written to extract EXIF data from JPEG and TIFF images."
license = "MIT"
categories = ["multimedia::images", "parser-implementations"]
documentation = "https://elvis-epx.github.io/doc/rexif/"
homepage = "https://lib.rs/crates/rexif"
keywords = ["exif", "jpeg", "tiff", "tag", "gps"]
readme = "README.md"
repository = "https://github.com/kornelski/rexif.git"

[lib]
name = "rexif"
path = "src/lib.rs"

[[bin]]
name = "rexiftool"
path = "src/main.rs"
