[package]
name = "rexif"
version = "0.4.1"
authors = ["Elvis Pfützenreuter <epxx@epxx.co>", "Kornel <kornel@geekhood.net>", "Gabriela Alexandra Moldovan <gabi@cloudflare.com>"]
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE"]
description = "RExif is a native Rust crate, written to extract EXIF data from JPEG and TIFF images."
license = "MIT"
categories = ["multimedia::images", "parser-implementations"]
documentation = "https://docs.rs/rexif"
homepage = "https://lib.rs/crates/rexif"
keywords = ["exif", "metadata", "tiff", "tag", "gps"]
readme = "README.md"
repository = "https://github.com/kornelski/rexif.git"
edition = "2018"

[lib]
name = "rexif"
path = "src/lib.rs"

[dependencies]
num = "0.2.0"

[dev-dependencies]
glob = "0.3.0"

[[bin]]
name = "rexiftool"
path = "src/main.rs"
